--- a/server/frontend/static/About.html
+++ b/server/frontend/static/About.html
@@ -33,31 +33,31 @@
       </div>
       <div style="display: flex;flex-direction: row; margin:auto">
       <div class="card" style="width: 30%;">
-        <img class="card-img-top" src="/static/person.png" alt="Card image">
+        <img class="card-img-top" src="/static/person1.jpg" alt="Card image">
         <div class="card-body">
-          <p class="title">Person1</p>
-          <p>Person1 Title</p>
-          <p class="card-text">Some text that explains the person1 in about 2 short sentences</p>
+          <p class="title">Donald Jefferson</p>
+          <p>Sales Consultant</p>
+          <p class="card-text">Donald is responsible for interacting with customers, understanding their needs, showcasing vehicles, negotiating sales, and finalizing transactions. </p>
           <p>person1@example.com</p>
         </div>
       </div>
 
       <div class="card" style="width: 30%;">
-        <img class="card-img-top" src="/static/person.png" alt="Card image">
+        <img class="card-img-top" src="/static/person2.jpg" alt="Card image">
         <div class="card-body">
-          <p class="title">Person2</p>
-          <p>Person2 Title</p>
-          <p class="card-text">Some text that explains the person2 in about 2 short sentences</p>
+          <p class="title">Kiran Schwarz</p>
+          <p>Service Manager</p>
+          <p class="card-text">Kiran oversees the service department of Best Cars dealership, managing technicians and service advisors.</p>
           <p>person2@example.com</p>
         </div>
       </div>
 
       <div class="card" style="width: 30%;">
-        <img class="card-img-top" src="/static/person.png" alt="Card image">
+        <img class="card-img-top" src="/static/person3.jpg" alt="Card image">
         <div class="card-body">
-          <p class="title">Person3</p>
-          <p>Person3 Title</p>
-          <p class="card-text">Some text that explains the person3 in about 2 short sentences</p>
+          <p class="title">Eric Silverwood</p>
+          <p>Finance and Insurance Manager</p>
+          <p class="card-text">Eric works with customers to arrange financing for vehicle purchases and offers additional products like warranties and insurance.</p>
           <p>person3@example.com</p>
         </div>
       </div>
