--- a/server/frontend/static/About.html
+++ b/server/frontend/static/About.html
@@ -29,36 +29,36 @@
     <div class="card" style="width: 80%;margin: auto; margin-top:5%;">
       <div class="banner" name="about-header">
         <h1>About Us</h1>
-        Welcome to Best Cars Dealership, your trusted source for quality vehicles and exceptional service in America. Our passion for cars and commitment to customer satisfaction drives everything we do.
+        <p align="center"> Welcome to Best Cars Dealership, your trusted source for quality vehicles and exceptional service in America.<br>Our passion for cars and commitment to customer satisfaction drives everything we do.</p>
       </div>
       <div style="display: flex;flex-direction: row; margin:auto">
       <div class="card" style="width: 30%;">
         <img class="card-img-top" src="/static/person1.jpg" alt="Card image">
-        <div class="card-body">
+        <div class="card-body" align="center">
           <p class="title">Donald Jefferson</p>
-          <p>Sales Consultant</p>
+          <p><b>Sales Consultant</b></p>
           <p class="card-text">Donald is responsible for interacting with customers, understanding their needs, showcasing vehicles, negotiating sales, and finalizing transactions. </p>
-          <p>person1@example.com</p>
+          <p>donald@dealers.com</p>
         </div>
       </div>
 
       <div class="card" style="width: 30%;">
         <img class="card-img-top" src="/static/person2.jpg" alt="Card image">
-        <div class="card-body">
+        <div class="card-body" align="center">
           <p class="title">Kiran Schwarz</p>
-          <p>Service Manager</p>
+          <p><b>Service Manager</b></p>
           <p class="card-text">Kiran oversees the service department of Best Cars dealership, managing technicians and service advisors.</p>
-          <p>person2@example.com</p>
+          <p>kiran@dealers.com</p>
         </div>
       </div>
 
       <div class="card" style="width: 30%;">
         <img class="card-img-top" src="/static/person3.jpg" alt="Card image">
-        <div class="card-body">
+        <div class="card-body" align="center">
           <p class="title">Eric Silverwood</p>
-          <p>Finance and Insurance Manager</p>
+          <p><b>Finance and Insurance Manager</b></p>
           <p class="card-text">Eric works with customers to arrange financing for vehicle purchases and offers additional products like warranties and insurance.</p>
-          <p>person3@example.com</p>
+          <p>eric@dealers.com</p>
         </div>
       </div>
     </div>
