--- a/server/frontend/static/Contact.html
+++ b/server/frontend/static/Contact.html
@@ -25,5 +25,40 @@
       </div>
     </div>
   </nav>
+
+  <div class="card" style="width: 80%;margin: auto; margin-top:5%; border-radius: 40px; padding:10px; box-shadow: 0 4px 15px rgba(0, 0, 0, 0.2);">
+    <div class="card" style="border:0px;">
+        <img class="card-img-top" src="/static/cars.jpeg" alt="Card image" style="max-width: 80%; height: auto; margin: auto; display: block;>
+    </div>
+    <div class="banner" name="about-header">
+        <h1 align="center">Contact Us</h1>
+        <p align="center">Got questions? We're here to help!</p>
+    </div>
+    <div style="display: flex;flex-direction: row; margin:auto">
+        <div class="card" style="border:0px; width:80%;">
+            <img class="card-img-top" src="/static/contactus.png" alt="Card image">
+        </div>
+        <div class="vl"></div>
+        <div class="card" style="border:0px;width:80%;">
+            <div class="card-body" align="center">
+              <p><b>Customer Service</b></p>
+              <p>support@dealers.com</p>
+              <hr>
+              <p><b>National Advertising Team</b></p>
+              <p>national@dealers.com</p>
+            </div>
+        </div>
+        <div class="card" style="border:0px;width:80%;">
+            <div class="card-body" align="center">
+              <p><b>Public Relations Team</b></p>
+              <p>pr@dealers.com</p>
+              <hr>
+              <p><b>bestcar.com Offices</b></p>
+              <p>bestcar@dealers.com</p>
+            </div>
+        </div>
+    </div>
+  </div>
+
 </div>
 </html>
